# drivers-orogen-aggregator

./: CMakeLists.txt  aggregator.orogen  manifest.xml
orogen_plugin/: aggregator_plugin.rb
rock/: orogen_plugin.rb  roby_plugin.rb  stream_aligner_test_helpers.rb
test/rock/: stream_aligner_test_helpers_test.rb
